Add and update multiple views

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -3,3 +3,8 @@
 }
 
 <h2>Salon</h2>
+
+<p>Blah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blah</p>
+
+@await Html.PartialAsync("Buttons/StylistHome")
+@await Html.PartialAsync("Buttons/StylistAddStylist")
