--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -9,4 +9,5 @@
 </fieldset>
 
 @await Html.PartialAsync("Buttons/StylistHome")
+@await Html.PartialAsync("Buttons/StylistAddStylist")
 @await Html.PartialAsync("Buttons/StylistAddClient")
