--- a/HairSalon/Views/Shared/Buttons/StylistAddClient.cshtml
+++ b/HairSalon/Views/Shared/Buttons/StylistAddClient.cshtml
@@ -1,3 +1,1 @@
-<a href='@Url.Action("Create", "Stylists")'>
-  <button type='button'>create</button>
-</a>
+<a href='@Url.Action("Create", "Stylists", new {id = Model.StylistId})'><button type='button'>Add client</button></a>
