--- a/HairSalon/Views/Shared/Buttons/StylistHome.cshtml
+++ b/HairSalon/Views/Shared/Buttons/StylistHome.cshtml
@@ -1,3 +1,1 @@
-<a href='@Url.Action("Create", "Stylists")'>
-  <button type='button'>create</button>
-</a>
+<a href='@Url.Action("Index", "Stylists")'><button type='button'>View stylists</button></a>
