--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -1,3 +1,19 @@
 @{
   Layout = "_Base";
 }
+@using System.Collections.Generic;
+
+@model HairSalon.Models.Client
+
+<h4>Add a new client</h4>
+
+@using (Html.BeginForm())
+{
+  @Html.LabelFor(model => model.Name)
+  @Html.TextBoxFor(model => model.Name)
+
+  @Html.LabelFor(model => model.Stylist)
+  @Html.DropDownList("StylistId")
+
+  <input type="submit" value="Add new item" class="btn btn-default" />
+}
