--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -2,9 +2,18 @@
   Layout = "_Base";
 }
 
+@using HairSalon.Models;
+@model List<HairSalon.Models.Client>;
+
 <h2>Salon</h2>
 
-<p>Blah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blahBlah blah blah</p>
+<p>Welcome to Eclair's Salon management page.</p>
+<p>Please select an action below.</p>
 
 @await Html.PartialAsync("Buttons/StylistHome")
 @await Html.PartialAsync("Buttons/StylistAddStylist")
+
+@if (Model.Count != 0)
+{
+  <p>You have orphaned clients!</p>
+}
