Groundwork for input validation

--- a/HairSalon/Views/Shared/_Base.cshtml
+++ b/HairSalon/Views/Shared/_Base.cshtml
@@ -5,7 +5,9 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/sphars/yacck/yacck.min.css'>
   <link rel='stylesheet' type='text/css' media='screen' href='~/css/site.css'>
+  <script src="~/js/jquery.min.js"></script>
   <script src='~/js/script.js'></script>
+  @await RenderSectionAsync("Scripts", required: false)
   <title>Epi Week 10: Hair Salon Stylist & Client Solution</title>
 </head>
 <body>
