--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -11,9 +11,33 @@
 <p>Please select an action below.</p>
 
 @await Html.PartialAsync("Buttons/StylistHome")
+<br />
 @await Html.PartialAsync("Buttons/StylistAddStylist")
+
+<!-- <form>
+  <input type="text" id="searchTerm" placeholder="Search">
+</form> -->
 
 @if (Model.Count != 0)
 {
-  <p>You have orphaned clients!</p>
+  <hr />
+  <table>
+    <thead>
+      <tr>
+        <th style='width: 10%'>Client ID</th>
+        <th>Clients With No Stylists</th>
+        <th style='width: 15%'></th>
+      </tr>
+    </thead>
+    <tbody>
+  @foreach (Client c in Model)
+  {
+    <tr>
+      <td>@c.ClientId</td>
+      <td>@c.Name</td>
+      <td>@Html.ActionLink("Edit", "Edit", "Clients", new { id = c.ClientId }) | @Html.ActionLink("Delete", "Delete", "Clients", new { id = c.ClientId})</td>
+    </tr>
+  }
+    </tbody>
+  </table>
 }
