Add form partials for client & stylist

--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -20,5 +20,5 @@
     <input type="hidden" name="StylistId" value="@ViewBag.Selected.ToString()" />
   }
 
-  @await Html.PartialAsync("Buttons/ClientAddClient")
+  <button>Add new stylist</button>
 }
