--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -7,8 +7,10 @@
 
 @using (Html.BeginForm())
 {
-  @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name)
+  @Html.LabelFor(model => model.FirstName)
+  @Html.TextBoxFor(model => model.FirstName)
+  @Html.LabelFor(model => model.LastName)
+  @Html.TextBoxFor(model => model.LastName)
   <button>Add new stylist</button>
 }
 
