--- a/HairSalon/Views/Stylists/Delete.cshtml
+++ b/HairSalon/Views/Stylists/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Are you sure you want to delete this stylist?</h2>
 
-@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
 @using (Html.BeginForm())
 {
+  <h1>@Html.DisplayFor(model => model.Name)</h1>
   @await Html.PartialAsync("Buttons/Delete")
 }
 @await Html.PartialAsync("Buttons/StylistHome")
