--- a/HairSalon/Views/Stylists/Edit.cshtml
+++ b/HairSalon/Views/Stylists/Edit.cshtml
@@ -10,8 +10,10 @@
 {
   @Html.HiddenFor(model => model.StylistId)
 
-  @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name, new { value = "@model.Name" })
+  @Html.LabelFor(model => model.FirstName)
+  @Html.TextBoxFor(model => model.FirstName, new { value = "@model.FirstName" })
+  @Html.LabelFor(model => model.LastName)
+  @Html.TextBoxFor(model => model.LastName, new { value = "@model.LastName" })
   <button value="Save">Edit stylist</button>
 }
 
