Add partial for orphaned clients

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -2,7 +2,6 @@
   Layout = "_Base";
 }
 
-@using HairSalon.Models;
 @model List<HairSalon.Models.Client>;
 
 <h2>Salon</h2>
@@ -11,33 +10,9 @@
 <p>Please select an action below.</p>
 
 @await Html.PartialAsync("Buttons/StylistHome")
-<br />
 @await Html.PartialAsync("Buttons/StylistAddStylist")
-
-<!-- <form>
-  <input type="text" id="searchTerm" placeholder="Search">
-</form> -->
 
 @if (Model.Count != 0)
 {
-  <hr />
-  <table>
-    <thead>
-      <tr>
-        <th style='width: 10%'>Client ID</th>
-        <th>Clients With No Stylists</th>
-        <th style='width: 15%'></th>
-      </tr>
-    </thead>
-    <tbody>
-  @foreach (Client c in Model)
-  {
-    <tr>
-      <td>@c.ClientId</td>
-      <td>@c.Name</td>
-      <td>@Html.ActionLink("Edit", "Edit", "Clients", new { id = c.ClientId }) | @Html.ActionLink("Delete", "Delete", "Clients", new { id = c.ClientId})</td>
-    </tr>
-  }
-    </tbody>
-  </table>
+  @await Html.PartialAsync("Tables/OrphanClients")
 }
