--- a/HairSalon/Views/Shared/Header.cshtml
+++ b/HairSalon/Views/Shared/Header.cshtml
@@ -2,6 +2,8 @@
 
 <nav>
   <ul>
-    <li><a href='/'>Home</a></li>
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li>@Html.ActionLink("Stylists", "Index", "Stylists")</li>
+    <li>@Html.ActionLink("Clients", "Index", "Clients")</li>
   </ul>
 </nav>
