--- a/HairSalon/Views/Clients/Delete.cshtml
+++ b/HairSalon/Views/Clients/Delete.cshtml
@@ -1,3 +1,15 @@
 @{
   Layout = "_Base";
 }
+
+@model HairSalon.Models.Client
+
+<h2>Are you sure you want to delete this client?</h2>
+
+@using (Html.BeginForm())
+{
+  @await Html.PartialAsync("Tables/ClientDetails")
+
+  @await Html.PartialAsync("Buttons/Cancel")
+  @await Html.PartialAsync("Buttons/Delete")
+}
