--- a/HairSalon/Views/Shared/Forms/StylistForm.cshtml
+++ b/HairSalon/Views/Shared/Forms/StylistForm.cshtml
@@ -1,5 +1,8 @@
 @model HairSalon.Models.Stylist
+
 @Html.LabelFor(model => model.FirstName)
-@Html.TextBoxFor(model => model.FirstName, new { value = "@model.FirstName" })
+@Html.TextBoxFor(model => model.FirstName)
+@Html.ValidationMessageFor(model => model.FirstName)
 @Html.LabelFor(model => model.LastName)
-@Html.TextBoxFor(model => model.LastName, new { value = "@model.LastName" })
+@Html.TextBoxFor(model => model.LastName)
+@Html.ValidationMessageFor(model => model.LastName)
