--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -16,3 +16,6 @@ else
 
   @await Html.PartialAsync("Buttons/ClientAddClient")
 }
+
+@await Html.PartialAsync("Buttons/StylistAddStylist")
+@await Html.PartialAsync("Buttons/ClientAddClient")
