--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
 
 @model List<HairSalon.Models.Client>;
 
-<h2>Salon</h2>
+<h2>Eau Claire's Salon</h2>
 
-<p>Welcome to Eclair's Salon management page.</p>
+<p>Welcome to Eau Claire's Salon management page.</p>
 <p>Please select an action below.</p>
 
 @await Html.PartialAsync("Buttons/StylistHome")
