--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -1,6 +1,11 @@
 @{
   Layout = "_Base";
 }
+@section Scripts {
+  @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+  }
+}
 @model HairSalon.Models.Stylist
 
 <h2>Add Stylist</h2>
@@ -8,5 +13,6 @@
 @using (Html.BeginForm())
 {
   @await Html.PartialAsync("Forms/StylistForm")
+  <br />
   <button>Add new stylist</button>
 }
