--- a/HairSalon/Views/Shared/Header.cshtml
+++ b/HairSalon/Views/Shared/Header.cshtml
@@ -5,5 +5,6 @@
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
     <li>@Html.ActionLink("Stylists", "Index", "Stylists")</li>
     <li>@Html.ActionLink("Clients", "Index", "Clients")</li>
+    <li>@Html.ActionLink("Search", "Index", "Search")</li>
   </ul>
 </nav>
